fix css spacing

--- a/_sass/__base.scss
+++ b/_sass/__base.scss
@@ -181,7 +181,7 @@ dd {
 PAGE STYLES
 ***************/
 .pageTitle {
-	margin: 1em auto 1em;
+	margin: .5em auto .5em;
 	text-align: center;
 }
 
