--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -25,7 +25,7 @@ body {
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
-  margin: .5rem 0 1.5rem;
+  margin: .5rem 0 .5rem;
   font-family: $sans-serif;
 }
 
@@ -111,7 +111,7 @@ blockquote {
   }
 }
 
-h1, .archive, h2, .archive, h3, .archive, h4, .archive, h5, .archive, h6, .archive {
+.coalate h1, .coalate h2, .coalate h3, .coalate h4, .coalate h5, .coalate h6, {
 margin: .5rem 0 .5rem;
 font-family: $sans-serif;
 }
